--- a/css/_content.scss
+++ b/css/_content.scss
@@ -39,6 +39,8 @@
 .text {
   text-align: justify;
   padding: 15px;
+  font-family: opensans;
+  font-size: 16px;
 }
 
 
@@ -112,6 +114,10 @@
 
 @media only screen and (min-width: $bp-medium) {
 
+  .text, .subsection {
+    font-size: 20px;
+  }
+
   #main {
     width: calc(100vw - #{$sidenav-width_closed});
   }
@@ -130,7 +136,7 @@
   }
 
   .section span {
-    font-size: 30px;
+    font-size: 40px;
   }
 }
 
