--- a/css/_fair.scss
+++ b/css/_fair.scss
@@ -1,174 +1,177 @@
-.image {
-  background-image: url(#{$awss3}/img/1.jpg);
-  background-size: cover;
-  background-position: 50% 50%;
-  background-repeat: none;
-}
+.fair {
 
-.patterned {
-  background: repeating-linear-gradient(-45deg, transparent 0%, transparent 70%,  $ct-blue 70%, $ct-blue 75%,  transparent 75%, transparent 100%),
-  repeating-linear-gradient(-45deg, transparent 0%, transparent 85%, $ct-blue 85%, $ct-blue 95%, transparent 95%, transparent 100%),
-  repeating-linear-gradient(-45deg, transparent 0%, transparent 25%, $ct-orange 25%, $ct-orange 30%, transparent 30%, transparent 100%),
-  repeating-linear-gradient(-45deg, transparent 0%, transparent 5%, $ct-orange 5%, $ct-orange 15%, transparent 15%, transparent 100%),
-  url(#{$awss3}/img/pattern.png) repeat top left;
-
-  .left, .right {
-    color: $text-white;
-    font-family: montserrat;
-    font-size: 50px;
+  .image {
+    background-image: url(#{$awss3}/img/1.jpg);
+    background-size: cover;
+    background-position: 50% 50%;
+    background-repeat: none;
   }
 
-}
+  .patterned {
+    background: repeating-linear-gradient(-45deg, transparent 0%, transparent 70%,  $ct-blue 70%, $ct-blue 75%,  transparent 75%, transparent 100%),
+    repeating-linear-gradient(-45deg, transparent 0%, transparent 85%, $ct-blue 85%, $ct-blue 95%, transparent 95%, transparent 100%),
+    repeating-linear-gradient(-45deg, transparent 0%, transparent 25%, $ct-orange 25%, $ct-orange 30%, transparent 30%, transparent 100%),
+    repeating-linear-gradient(-45deg, transparent 0%, transparent 5%, $ct-orange 5%, $ct-orange 15%, transparent 15%, transparent 100%),
+    url(#{$awss3}/img/pattern.png) repeat top left;
 
+    .left, .right {
+      color: $text-white;
+      font-family: montserrat;
+      font-size: 50px;
+    }
 
-#fair-image {
-  padding-bottom: 15px;
-  max-width: 960px;
-  width: 80%;
-  overflow-x: hidden;
-  margin-left: auto;
-  margin-right: auto;
-
-  #date-day1, #date-day2, #date-month, #date-year {
-    color: $text-white;
-    font-family: montserrat;
-    font-size: 50px;
-    font-size: 12vw;
   }
 
-  #date-place, #date-time {
-    color: $text-white;
-    font-family: montserrat;
-    font-size: 20px;
-    font-size: 5vw;
-  }
 
-  .date-container {
-    max-width: 700px;
-    width: 100%;
+  #fair-image {
+    padding-bottom: 15px;
+    max-width: 960px;
+    width: 80%;
+    overflow-x: hidden;
     margin-left: auto;
     margin-right: auto;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: flex-end;
-
-    .date-bar {
-      flex-grow: 1;
-      height: 1px;
-      height: .5vw;
-      background-color: $text-white;
-      margin-top: auto;
-      margin-bottom: auto;
-      margin-left: 20px;
-      margin-right: 20px;
-    }
-  }
-
-
-  @media only screen and (min-width: $bp-large) {
 
     #date-day1, #date-day2, #date-month, #date-year {
-      font-size: 80px !important;
+      color: $text-white;
+      font-family: montserrat;
+      font-size: 50px;
+      font-size: 12vw;
     }
 
     #date-place, #date-time {
-      font-size: 20px !important;
+      color: $text-white;
+      font-family: montserrat;
+      font-size: 20px;
+      font-size: 5vw;
     }
 
-    .date-bar {
-      height: 5px !important;
+    .date-container {
+      max-width: 700px;
+      width: 100%;
+      margin-left: auto;
+      margin-right: auto;
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      align-items: flex-end;
+
+      .date-bar {
+        flex-grow: 1;
+        height: 1px;
+        height: .5vw;
+        background-color: $text-white;
+        margin-top: auto;
+        margin-bottom: auto;
+        margin-left: 20px;
+        margin-right: 20px;
+      }
+    }
+
+
+    @media only screen and (min-width: $bp-large) {
+
+      #date-day1, #date-day2, #date-month, #date-year {
+        font-size: 80px !important;
+      }
+
+      #date-place, #date-time {
+        font-size: 20px !important;
+      }
+
+      .date-bar {
+        height: 5px !important;
+      }
+    }
+
+
+    @media only screen and (min-width: $bp-max + $sidenav-width_closed) {
+
+      #date-day1, #date-day2, #date-month, #date-year {
+        font-size: 100px !important;
+      }
+
+      #date-place, #date-time {
+        font-size: 40px !important;
+      }
+
+      .date-bar {
+        height: 5px !important;
+      }
+
     }
   }
 
 
-  @media only screen and (min-width: $bp-max + $sidenav-width_closed) {
 
-    #date-day1, #date-day2, #date-month, #date-year {
-      font-size: 100px !important;
-    }
-
-    #date-place, #date-time {
-      font-size: 40px !important;
-    }
-
-    .date-bar {
-      height: 5px !important;
-    }
-
-  }
-}
-
-
-
-.fair-introlinks {
-  text-align: left;
-
-  a {
-    text-decoration: none;
-  }
-
-  a:hover span {
-    text-decoration: underline;
-  }
-}
-
-@media only screen and (min-width: $bp-max) {
   .fair-introlinks {
-    text-align: center;
-  }
+    text-align: left;
 
-}
-
-
-.schedule {
-  tr {
-    td:nth-child(1) {
-      text-align: right;
-      vertical-align: top;
-      padding-right: 5px;
-      white-space: nowrap;
+    a {
+      text-decoration: none;
     }
 
-    td:nth-child(2) {
-      text-align: right;
-      vertical-align: top;
-      padding-right: 10px;
-      white-space: nowrap;
-    }
-    td:nth-child(3) {
-      text-align: left;
+    a:hover span {
+      text-decoration: underline;
     }
   }
+
+  @media only screen and (min-width: $bp-max) {
+    .fair-introlinks {
+      text-align: center;
+    }
+
+  }
+
+
+  .schedule {
+    tr {
+      td:nth-child(1) {
+        text-align: right;
+        vertical-align: top;
+        padding-right: 5px;
+        white-space: nowrap;
+      }
+
+      td:nth-child(2) {
+        text-align: right;
+        vertical-align: top;
+        padding-right: 10px;
+        white-space: nowrap;
+      }
+      td:nth-child(3) {
+        text-align: left;
+      }
+    }
+  }
+
+
+
+
+  // .image-container {
+  //   padding: 15px;
+  //   display: flex;
+  //   flex-direction: row;
+  //   flex-wrap: wrap;
+  //   justify-content: space-between;
+  //   align-items: flex-start;
+  //   margin-left: auto;
+  //   margin-right: auto;
+  //
+  //   span {
+  //     color: $text-white;
+  //     font-family: montserrat;
+  //     font-size: 50px;
+  //   }
+  //
+  //   .bar {
+  //     flex-grow: 1;
+  //     height: 2px;
+  //     background-color: $text-white;
+  //     margin-top: auto;
+  //     margin-bottom: auto;
+  //     margin-left: 20px;
+  //     margin-right: 20px;
+  //   }
+  // }
 }
-
-
-
-
-// .image-container {
-//   padding: 15px;
-//   display: flex;
-//   flex-direction: row;
-//   flex-wrap: wrap;
-//   justify-content: space-between;
-//   align-items: flex-start;
-//   margin-left: auto;
-//   margin-right: auto;
-//
-//   span {
-//     color: $text-white;
-//     font-family: montserrat;
-//     font-size: 50px;
-//   }
-//
-//   .bar {
-//     flex-grow: 1;
-//     height: 2px;
-//     background-color: $text-white;
-//     margin-top: auto;
-//     margin-bottom: auto;
-//     margin-left: 20px;
-//     margin-right: 20px;
-//   }
-// }
