--- a/css/main.scss
+++ b/css/main.scss
@@ -70,3 +70,4 @@ $sidenav-boxshadow: -3px 0px 6px rgba(0,0,0,0.16), -3px 0px 6px rgba(0,0,0,0.23)
 @import "footer";
 @import "home";
 @import "fair";
+@import "exhibitors";
