--- a/css/main.css
+++ b/css/main.css
@@ -953,5 +953,38 @@ a {
     font-size: 50px !important; }
   .exhibitors .image-container .bar {
     height: 2px !important; } }
+.exhibitors .packages-base, .exhibitors .packages-silver, .exhibitors .packages-gold, .exhibitors .packages-platinum {
+  width: 150px;
+  height: 200px;
+  margin: auto;
+  text-align: center;
+  vertical-align: middle;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #2b2b2b; }
+  .exhibitors .packages-base span, .exhibitors .packages-silver span, .exhibitors .packages-gold span, .exhibitors .packages-platinum span {
+    margin: auto;
+    font-family: opensans-bold;
+    font-size: 75px; }
+.exhibitors .packages-base {
+  background-color: #2b2b2b;
+  color: white; }
+.exhibitors .packages-silver {
+  background-color: silver; }
+.exhibitors .packages-gold {
+  background-color: #d4af37; }
+.exhibitors .packages-platinum {
+  background-color: #e5e4e2; }
+.exhibitors .packages tr td:nth-child(1) {
+  padding-right: 10px;
+  vertical-align: top; }
+.exhibitors .packages tr td:nth-child(2) {
+  text-align: left; }
+.exhibitors .feedback tr td {
+  vertical-align: top; }
+.exhibitors .feedback tr td:nth-child(4) {
+  text-align: left;
+  padding-left: 10px; }
 
 /*# sourceMappingURL=main.css.map */
